--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "robinhood",
-  "version": "1.8.0",
-  "description": "Comprehensive NodeJS API wrapper for the Robinhood API",
-  "main": "src/robinhood.js",
-  "typings": "robinhood.d.ts",
+  "name": "robinhood-node",
+  "version": "2.0.0",
+  "description": "Comprehensive Node.js API wrapper for the Robinhood private API",
+  "main": "src/index.js", 
+  "typings": "robinhood.d.ts", 
   "scripts": {
     "test": "nyc ava && npm run typescript",
     "typescript": "tsc --project test/types/tsconfig.json",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/aurbano/robinhood-node.git"
+    "url": "https://github.com/Joshtt23/robinhood-node.git" 
   },
   "keywords": [
     "robinhood",
@@ -20,26 +20,21 @@
     "stock",
     "finance"
   ],
-  "author": "Alejandro U. Alvarez",
+  "author": "Joshua Traver", 
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/aurbano/robinhood-node/issues"
+    "url": "https://github.com/Joshtt23/robinhood-node/issues" 
   },
-  "homepage": "https://github.com/aurbano/robinhood-node",
+  "homepage": "https://github.com/Joshtt23/robinhood-node", 
   "devDependencies": {
     "ava": "^0.17.0",
     "coveralls": "^2.11.15",
     "nyc": "^10.0.0",
     "standard-version": "^7.0.0",
-    "typescript": "~3.6.3"
+    "typescript": "~4.9.5" 
   },
-  "dependencies": {
-    "@types/request": "~2.48.3",
-    "lodash": "^4.17.15",
-    "promise": "^8.0.3",
-    "query-string": "^4.3.2",
-    "request": "^2.88.0",
-    "should": "^11.1.1",
-    "uuid": "^8.3.1"
-  }
+  "dependencies": { 
+    "node-fetch": "^3.3.1" 
+  },
+  "type": "module" 
 }
