--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "robinhood-nodev2",
+  "name": "robinhood-nodejs",
   "version": "2.0.0",
   "description": "Comprehensive Node.js API wrapper for the Robinhood private API",
   "main": "src/index.js", 
